fix: align the contents in the header section

--- a/art-gallery-website/scss/main.scss
+++ b/art-gallery-website/scss/main.scss
@@ -38,6 +38,7 @@ h2 {
 
 // Header Styles
 .hero-container {    
+    border: 3px solid olive;
     display: flex;
     flex-direction: column;
     gap: 3.2rem;
@@ -56,7 +57,6 @@ h2 {
         flex-direction: column;
         gap: 3.2rem;
         padding: 0 1.6rem;
-        // border: 2px solid olive;
 
         .logo-container {
             max-width: 34rem;
@@ -86,7 +86,7 @@ h2 {
                 
                 &:hover {
                     background-color: $bg-gold;
-        
+
                     .arrow {
                         background-color: $bg-almost-dark;
                     }
@@ -144,6 +144,7 @@ h2 {
             max-width: 127.5rem;
             position: relative;
             
+            
             .bg-hero {
                 display: block;
                 background-color: $bg-almost-dark;
@@ -158,7 +159,7 @@ h2 {
             .hero-content {
                 align-items: center;
                 position: static;
-                padding-bottom: 22rem;
+                padding-bottom: 16.5rem;
 
                 .logo-container {
                     position: absolute;
